--- a/package.json
+++ b/package.json
@@ -4,33 +4,34 @@
   "description": "NuclearMail is an experiment of writing a webmail client using React and the Flux architecture. It runs completely in the browser and uses the GMail REST API.",
   "main": "App.js",
   "dependencies": {
-    "asap": "^1.0.0",
+    "asap": "^2.0.1",
     "css-vendor": "^0.2.3",
-    "es6-shim": "^0.18.0",
+    "es6-shim": "^0.27.1",
     "google-caja": "0.0.2",
     "keyboardjs": "^0.4.2",
-    "lodash": "^2.4.1",
-    "react": "^0.12.2",
-    "react-intl": "^1.1.0",
-    "react-router": "^0.11.6",
-    "rsvp": "^3.0.17",
+    "lodash": "^3.6.0",
+    "react": "^0.13.1",
+    "react-intl": "^1.2.0",
+    "react-router": "^0.13.2",
+    "rsvp": "^3.0.18",
     "tinytinycolor": "0.0.3",
-    "utf8": "^2.0.0"
+    "utf8": "^2.1.0"
   },
   "devDependencies": {
-    "babel-core": "^4.7.16",
+    "babel-core": "^5.0.2",
     "babel-eslint": "^2.0.2",
-    "babel-loader": "^4.2.0",
-    "eslint": "^0.17.1",
-    "eslint-plugin-react": "^1.6.0",
+    "babel-loader": "^5.0.0",
+    "eslint": "^0.18.0",
+    "eslint-plugin-react": "^2.0.2",
     "mkdirp": "^0.5.0",
     "nodemon": "^1.3.7",
-    "react-hot-loader": "^1.2.3",
+    "react-hot-loader": "^1.2.4",
     "rimraf": "^2.3.2",
     "webpack": "^1.7.3",
     "webpack-dev-server": "^1.8.0"
   },
   "scripts": {
+    "lint": "./node_modules/eslint/bin/eslint.js src/js/; true;",
     "clean": "rimraf build",
     "watch-html": "mkdirp build && nodemon --watch src/index.html --exec 'echo `cp src/index.html build/index.html`'",
     "watch-js": "mkdirp build",
