--- a/.flowconfig
+++ b/.flowconfig
@@ -9,6 +9,7 @@
 .*/node_modules/watchify/.*
 .*/node_modules/webpack-dev-server/.*
 .*/node_modules/webpack/.*
+.*/node_modules/radium/.*
 
 [include]
 src/js
