--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "App.js",
   "dependencies": {
     "asap": "^2.0.3",
-    "es6-shim": "^0.31.0",
+    "es6-shim": "^0.32.0",
     "google-caja": "0.0.2",
-    "intl": "^0.1.4",
+    "intl": "^1.0.0-rc-1",
     "keyboardjs": "^0.4.2",
-    "lodash": "^3.8.0",
-    "radium": "^0.12.2",
-    "react": "^0.13.2",
+    "lodash": "^3.9.3",
+    "radium": "^0.13.0",
+    "react": "^0.13.3",
     "react-intl": "^1.2.0",
     "react-router": "^0.13.3",
     "rsvp": "^3.0.18",
@@ -20,17 +20,17 @@
     "utf8": "^2.1.0"
   },
   "devDependencies": {
-    "babel-eslint": "^3.1.7",
-    "babel-loader": "^5.0.0",
-    "eslint": "^0.20.0",
-    "eslint-plugin-react": "^2.3.0",
-    "expose-loader": "^0.6.0",
-    "mkdirp": "^0.5.0",
+    "babel-eslint": "^3.1.15",
+    "babel-loader": "^5.1.4",
+    "eslint": "^0.22.1",
+    "eslint-plugin-react": "^2.5.0",
+    "expose-loader": "^0.7.0",
+    "mkdirp": "^0.5.1",
     "nodemon": "^1.3.7",
-    "react-hot-loader": "^1.2.6",
-    "rimraf": "^2.3.3",
-    "webpack": "^1.8.11",
-    "webpack-dev-server": "^1.8.2"
+    "react-hot-loader": "^1.2.7",
+    "rimraf": "^2.4.0",
+    "webpack": "^1.9.10",
+    "webpack-dev-server": "^1.9.0"
   },
   "scripts": {
     "clean": "rimraf build",
